[gd_scene load_steps=4 format=3 uid="uid://brmpexnecc4eg"]

[ext_resource type="Script" path="res://UI/Select Level Menu/select_level_menu.gd" id="1_cn2oe"]
[ext_resource type="Theme" uid="uid://2rt3ux601me2" path="res://UI/ui_theme.tres" id="1_edsmv"]
[ext_resource type="Texture2D" uid="uid://bidve5xu4ybeu" path="res://Assets/art/simple-lock.svg" id="3_qby67"]

[node name="SelectLevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_edsmv")
script = ExtResource("1_cn2oe")

[node name="UIContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Beginner" type="Label" parent="UIContainer"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.187
anchor_right = 0.5
anchor_bottom = 0.187
offset_left = -274.0
offset_top = -46.78
offset_right = 300.0
offset_bottom = 47.22
theme_override_colors/font_color = Color(0.138347, 0.746623, 0.878557, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "BEGINNER"

[node name="intermediate" type="Label" parent="UIContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.481
anchor_right = 0.5
anchor_bottom = 0.481
offset_left = -431.0
offset_top = -47.14
offset_right = 327.0
offset_bottom = 46.86
theme_override_colors/font_color = Color(0.643137, 0.643137, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "intermediate"

[node name="Advanced" type="Label" parent="UIContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.752
anchor_right = 0.526
anchor_bottom = 0.752
offset_left = -277.92
offset_top = -46.88
offset_right = 278.08
offset_bottom = 47.12
theme_override_colors/font_color = Color(0.643137, 0.643137, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "advanced"

[node name="BoxContainer" type="BoxContainer" parent="UIContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.336
anchor_right = 0.5
anchor_bottom = 0.336
offset_left = -117.0
offset_top = -77.84
offset_right = 344.0
offset_bottom = 78.16
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="LevelOneButton" type="Button" parent="UIContainer/BoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "1"
flat = true

[node name="LevelTwoButton" type="Button" parent="UIContainer/BoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "2"
flat = true

[node name="LevelThreeButton" type="Button" parent="UIContainer/BoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "3"
flat = true

[node name="BoxContainer2" type="BoxContainer" parent="UIContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.627
anchor_right = 0.5
anchor_bottom = 0.627
offset_left = -348.0
offset_top = -51.38
offset_right = 314.0
offset_bottom = 50.62
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="UIContainer/BoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_qby67")

[node name="LevelFourButton" type="Button" parent="UIContainer/BoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "4"
flat = true

[node name="LevelFiveButton" type="Button" parent="UIContainer/BoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "5"
flat = true

[node name="LevelSixButton" type="Button" parent="UIContainer/BoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "6"
flat = true

[node name="BoxContainer3" type="BoxContainer" parent="UIContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.498
anchor_top = 0.871
anchor_right = 0.498
anchor_bottom = 0.871
offset_left = -326.16
offset_top = -50.7401
offset_right = 324.84
offset_bottom = 51.2599
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer/BoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="UIContainer/BoxContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_qby67")

[node name="LevelSevenButton" type="Button" parent="UIContainer/BoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "7"
flat = true

[node name="LevelEightButton" type="Button" parent="UIContainer/BoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "8"
flat = true

[node name="LevelNineButton" type="Button" parent="UIContainer/BoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "9"
flat = true
